# wavecat-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: configuration.md  index.md  quickstart.md  reference.md
src/wavecat_sdk/: __init__.py  cli.py  config.py  gateway.py
tests/: test_config.py  test_gateway.py
